xterm (287-1) UNRELEASED; urgency=low

  * New upstream release.
  * Drop upstream patches.

 -- Julien Cristau <jcristau@debian.org>  Tue, 27 Nov 2012 20:22:09 +0100

xterm (278-4) unstable; urgency=low

  * Update copy of XTerm FAQ to revision 1.199 (dated 2012/11/11).

 -- Julien Cristau <jcristau@debian.org>  Tue, 27 Nov 2012 20:17:49 +0100

xterm (278-3) unstable; urgency=low

  [ Timo Aaltonen ]
  * control: Mark the package as Multi-Arch: foreign.

  [ Julien Cristau ]
  * Apply a few patches recommended by upstream in #694375 (thanks!)
    - amend patch from 278-2 to catch more cases
    - amend fix for Debian #650291 in patch #277 changes to account for
      different data returned by vnc4server (closes: #670638)
    - correct macro definition used for testing modes used in ANSI/DEC
      request-mode controls introduced in patch #262
    - add a null-pointer check in OkPasswd macro to fix a problem in resize
      with Fedora 17 and a serial console (report/patch by Daniel Drake).

 -- Julien Cristau <jcristau@debian.org>  Tue, 27 Nov 2012 19:57:47 +0100

xterm (278-2) unstable; urgency=low

  * Fix crash in Tektronix mode (Closes: #685458).

 -- Cyril Brulebois <kibi@debian.org>  Mon, 27 Aug 2012 02:14:38 +0200

xterm (278-1) unstable; urgency=low

  * New upstream release
    - move call to grantpt before asking utempter to add a record, to work
      with kFreeBSD which does not update the terminal's ownership until this
      point (closes: #652907)
    - document limitation of XIM interface in manpage (see #230787)
    - add four new actions for making the selection or data directly copied
      from the screen: exec-formatted, exec-selectable, insert-formatted,
      insert-selectable (closes: #637001)
    - add eightBitMeta resource to control the features which modify or
      interpret the eighth bit of a key when the meta modifier key is pressed
      (prompted by #326200)