@@ -38,7 +38,7 @@ Index: xterm/terminfo
 ===================================================================
 --- xterm.orig/terminfo
 +++ xterm/terminfo
-@@ -139,6 +139,8 @@ xterm-new|modern xterm terminal emulator
+@@ -137,6 +137,8 @@ xterm-new|modern xterm terminal emulator
  	use=xterm+pcfkeys,
  	use=xterm+tmux,
  	use=xterm-basic,
@@ -47,7 +47,7 @@ Index: xterm/terminfo
  #
  # Encode modifiers using parameters (see "Xterm Control Sequences" ctlseqs.ms).
  # Note that this is unrelated to PCTERM.
-@@ -1963,11 +1965,13 @@ xterm-r5|xterm R5 version,
+@@ -1967,11 +1969,13 @@ xterm-r5|xterm R5 version,
  # This is the only entry which you should have to customize, since "xterm"
  # is widely used for a variety of incompatible terminal emulations including
  # color_xterm and rxvt.
