@@ -2,7 +2,7 @@ Index: xterm/xterm.man
 ===================================================================
 --- xterm.orig/xterm.man
 +++ xterm/xterm.man
-@@ -1611,7 +1611,7 @@ The default is \*(``true\*(''.
+@@ -1707,7 +1707,7 @@ The default is \*(``true\*(''.
  .TP
  .B "allowFontOps (\fPclass\fB AllowFontOps)"
  Specifies whether control sequences that set/query the font should be allowed.
